index.css
* {
    font-family: "Pixelify Sans", sans-serif;
    padding: 0;
    margin: 0;
}

:root {
    --yellow: #ffe78a;
    --green: #1c6256;
    --purple: #29012a;

    --purple-low-opacity: #29012a66;
}

html {
    font-size: 150%;
}

body {
    color: var(--yellow);
    background-color: var(--purple);

    min-height: 100vh;
    width: 100vw;

    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;

    overflow-y: scroll;
    text-shadow: 3px 3px 1px var(--green);
}

#header {
    display: flex;
    justify-content: center;
    padding: 20px 0;

    width: 100%;
}

#header>h1 {
    font-size: 2rem;
}

#footer {
    display: flex;
    align-items: center;
    justify-content: center;
    padding: 20px 0;

    width: 100%;
    gap: 20px;
}

#github-icon {
    height: 40px;

}

.container {
    display: flex;
    flex-direction: column;
    flex-grow: 1;
}

.preview {
    display: flex;
    flex-direction: column;
    flex-grow: 1;
    justify-content: space-around;

    gap: 30px
}

.choice {
    width: 180px;
}

.idle {
    animation: idleanimation 1000ms alternate infinite
}

.pixel {
    image-rendering: pixelated;
    image-rendering: crisp-edges;
    image-rendering: -moz-crisp-edges;
}

.reverse {
    transform: rotate(180deg);
}

#player-side {
    display: flex;
    justify-content: center;
    flex-direction: column;
    align-items: center;
}

#player-options {
    margin-top: 40px;
    display: flex;
    gap: 10px;
    min-height: 80px;
}

.player-option {
    background-image: url('assets/images/border.png');
    background-repeat: no-repeat;
    background-size: contain;
    background-color: transparent;
    border: none;

    height: 60px;
    width: 60px;
    box-sizing: border-box;
    padding: 10px;

    cursor: pointer;
}

.player-option-img {
    height: 100%;
}

#result {
    display: flex;
    width: 100%;
    height: 100%;
    justify-content: center;
    align-items: center;

    text-align: center;

    position: absolute;
   
    font-size: 3rem;
    text-shadow: 5px 5px 1px var(--green);
    background-color: var(--purple-low-opacity);
}

.none {
    display: none !important;
}

@keyframes idleanimation {
    from {
        scale: 1;
    }
    to {
        scale: 1.2
    }
}

